Reconfig API Gateway